// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Document add component should render default with first option when no value passed 1`] = `
<div
  class="govuk-form-group"
>
  <fieldset
    class="govuk-fieldset "
  >
    <legend
      class="govuk-fieldset__legend"
      id="entity-list-legend"
    >
      <span
        class="govuk-fieldset__heading govuk-label--s"
      >
        Primary undefined
      </span>
    </legend>
    <table
      class="govuk-table"
    >
      <tbody
        class="govuk-table__body"
      >
        <tr
          class="govuk-radios govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            <div
              class="govuk-radios__item"
            >
              <input
                checked=""
                class="govuk-radios__input"
                id="entity-list-A"
                name="entity-list"
                type="radio"
                value="A"
              />
              <label
                class="govuk-label govuk-radios__label"
                for="entity-list-A"
              >
                isA
              </label>
            </div>
          </td>
          <td
            class="govuk-table__cell"
          />
        </tr>
        <tr
          class="govuk-radios govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            <div
              class="govuk-radios__item"
            >
              <input
                class="govuk-radios__input"
                id="entity-list-B"
                name="entity-list"
                type="radio"
                value="B"
              />
              <label
                class="govuk-label govuk-radios__label"
                for="entity-list-B"
              >
                isB
              </label>
            </div>
          </td>
          <td
            class="govuk-table__cell"
          />
        </tr>
        <tr
          class="govuk-radios govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            <div
              class="govuk-radios__item"
            >
              <input
                class="govuk-radios__input"
                id="entity-list-C"
                name="entity-list"
                type="radio"
                value="C"
              />
              <label
                class="govuk-label govuk-radios__label"
                for="entity-list-C"
              >
                isC
              </label>
            </div>
          </td>
          <td
            class="govuk-table__cell"
          />
        </tr>
      </tbody>
    </table>
  </fieldset>
</div>
`;

exports[`Document add component should render disabled when passed 1`] = `
<EntityList
  choices={Array []}
  disabled={true}
  name="entity-list"
  type="radio"
  updateState={[Function]}
>
  <div
    className="govuk-form-group"
  >
    <fieldset
      className="govuk-fieldset "
      disabled={true}
    >
      <legend
        className="govuk-fieldset__legend"
        id="entity-list-legend"
      >
        <span
          className="govuk-fieldset__heading govuk-label--s"
        >
          Primary undefined
        </span>
      </legend>
      <table
        className="govuk-table"
      >
        <tbody
          className="govuk-table__body"
        >
          No EntityList
        </tbody>
      </table>
    </fieldset>
  </div>
</EntityList>
`;

exports[`Document add component should render with correct label when passed 1`] = `
<EntityList
  choices={Array []}
  disabled={false}
  label="MY_LABEL"
  name="entity-list"
  type="radio"
  updateState={[Function]}
>
  <div
    className="govuk-form-group"
  >
    <fieldset
      className="govuk-fieldset "
      disabled={false}
    >
      <legend
        className="govuk-fieldset__legend"
        id="entity-list-legend"
      >
        <span
          className="govuk-fieldset__heading govuk-label--s"
        >
          Primary MY_LABEL
        </span>
      </legend>
      <table
        className="govuk-table"
      >
        <tbody
          className="govuk-table__body"
        >
          No EntityList
        </tbody>
      </table>
    </fieldset>
  </div>
</EntityList>
`;

exports[`Document add component should render with default props 1`] = `
<div
  class="govuk-form-group"
>
  <fieldset
    class="govuk-fieldset "
  >
    <legend
      class="govuk-fieldset__legend"
      id="entity-list-legend"
    >
      <span
        class="govuk-fieldset__heading govuk-label--s"
      >
        Primary undefined
      </span>
    </legend>
    No EntityList
    <table
      class="govuk-table"
    >
      <tbody
        class="govuk-table__body"
      />
    </table>
  </fieldset>
</div>
`;

exports[`Document add component should render with hint when passed 1`] = `
<EntityList
  choices={
    Array [
      Object {
        "label": "isA",
        "value": "A",
      },
      Object {
        "label": "isB",
        "value": "B",
      },
      Object {
        "label": "isC",
        "value": "C",
      },
    ]
  }
  disabled={false}
  hint="MY_HINT"
  name="entity-list"
  type="radio"
  updateState={[Function]}
>
  <div
    className="govuk-form-group"
  >
    <fieldset
      className="govuk-fieldset "
      disabled={false}
    >
      <legend
        className="govuk-fieldset__legend"
        id="entity-list-legend"
      >
        <span
          className="govuk-fieldset__heading govuk-label--s"
        >
          Primary undefined
        </span>
      </legend>
      <span
        className="govuk-form-hint"
      >
        MY_HINT
      </span>
      <table
        className="govuk-table"
      >
        <tbody
          className="govuk-table__body"
        >
          <tr
            className="govuk-radios govuk-table__row"
            key="0"
          >
            <td
              className="govuk-table__cell"
            >
              <div
                className="govuk-radios__item"
              >
                <input
                  checked={true}
                  className="govuk-radios__input"
                  id="entity-list-A"
                  name="entity-list"
                  onChange={[Function]}
                  type="radio"
                  value="A"
                />
                <label
                  className="govuk-label govuk-radios__label"
                  htmlFor="entity-list-A"
                >
                  isA
                </label>
              </div>
            </td>
            <td
              className="govuk-table__cell"
            />
          </tr>
          <tr
            className="govuk-radios govuk-table__row"
            key="1"
          >
            <td
              className="govuk-table__cell"
            >
              <div
                className="govuk-radios__item"
              >
                <input
                  checked={false}
                  className="govuk-radios__input"
                  id="entity-list-B"
                  name="entity-list"
                  onChange={[Function]}
                  type="radio"
                  value="B"
                />
                <label
                  className="govuk-label govuk-radios__label"
                  htmlFor="entity-list-B"
                >
                  isB
                </label>
              </div>
            </td>
            <td
              className="govuk-table__cell"
            />
          </tr>
          <tr
            className="govuk-radios govuk-table__row"
            key="2"
          >
            <td
              className="govuk-table__cell"
            >
              <div
                className="govuk-radios__item"
              >
                <input
                  checked={false}
                  className="govuk-radios__input"
                  id="entity-list-C"
                  name="entity-list"
                  onChange={[Function]}
                  type="radio"
                  value="C"
                />
                <label
                  className="govuk-label govuk-radios__label"
                  htmlFor="entity-list-C"
                >
                  isC
                </label>
              </div>
            </td>
            <td
              className="govuk-table__cell"
            />
          </tr>
        </tbody>
      </table>
    </fieldset>
  </div>
</EntityList>
`;

exports[`Document add component should render with validation error when passed 1`] = `
<EntityList
  choices={Array []}
  disabled={false}
  error="MY_ERROR"
  name="entity-list"
  type="radio"
  updateState={[Function]}
>
  <div
    className="govuk-form-group govuk-form-group--error"
  >
    <fieldset
      className="govuk-fieldset "
      disabled={false}
    >
      <legend
        className="govuk-fieldset__legend"
        id="entity-list-legend"
      >
        <span
          className="govuk-fieldset__heading govuk-label--s"
        >
          Primary undefined
        </span>
      </legend>
      <span
        className="govuk-error-message"
      >
        MY_ERROR
      </span>
      <table
        className="govuk-table"
      >
        <tbody
          className="govuk-table__body"
        >
          No EntityList
        </tbody>
      </table>
    </fieldset>
  </div>
</EntityList>
`;

exports[`Document add component should render with value when passed 1`] = `
<div
  class="govuk-form-group"
>
  <fieldset
    class="govuk-fieldset "
  >
    <legend
      class="govuk-fieldset__legend"
      id="entity-list-legend"
    >
      <span
        class="govuk-fieldset__heading govuk-label--s"
      >
        Primary undefined
      </span>
    </legend>
    <table
      class="govuk-table"
    >
      <tbody
        class="govuk-table__body"
      >
        <tr
          class="govuk-radios govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            <div
              class="govuk-radios__item"
            >
              <input
                checked=""
                class="govuk-radios__input"
                id="entity-list-A"
                name="entity-list"
                type="radio"
                value="A"
              />
              <label
                class="govuk-label govuk-radios__label"
                for="entity-list-A"
              >
                isA
              </label>
            </div>
          </td>
          <td
            class="govuk-table__cell"
          />
        </tr>
        <tr
          class="govuk-radios govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            <div
              class="govuk-radios__item"
            >
              <input
                class="govuk-radios__input"
                id="entity-list-B"
                name="entity-list"
                type="radio"
                value="B"
              />
              <label
                class="govuk-label govuk-radios__label"
                for="entity-list-B"
              >
                isB
              </label>
            </div>
          </td>
          <td
            class="govuk-table__cell"
          />
        </tr>
        <tr
          class="govuk-radios govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            <div
              class="govuk-radios__item"
            >
              <input
                class="govuk-radios__input"
                id="entity-list-C"
                name="entity-list"
                type="radio"
                value="C"
              />
              <label
                class="govuk-label govuk-radios__label"
                for="entity-list-C"
              >
                isC
              </label>
            </div>
          </td>
          <td
            class="govuk-table__cell"
          />
        </tr>
      </tbody>
    </table>
  </fieldset>
</div>
`;
